# JiPP2

./: CMakeLists.txt
Lab5/: CMakeLists.txt
Lab5/include/: pojazd.h
Lab5/src/: main.cpp  pojazd.cpp
Projekt2/: CMakeLists.txt
Projekt2/include/: Card.h  Dealer.h  Deck.h  Game.h  Player.h
Projekt2/src/: Card.cpp  Dealer.cpp  Deck.cpp  Game.cpp  Player.cpp  cards.txt  main.cpp  save.txt
allocation_basics/: main.cpp
firstLib/: CMakeLists.txt
firstLib/include/: lib.h
firstLib/src/: lib.cpp
firstLibCall/: CMakeLists.txt  main.cpp
lab10/: CMakeLists.txt
lab4/: CMakeLists.txt
lab4/include/: Kula.h  MyFirstClass.h  Prostopadloscian.h  Punkt.h
lab4/src/: Kula.cpp  MyFirstClass.cpp  Prostopadloscian.cpp  Punkt.cpp  main.cpp
lab6/: CMakeLists.txt
lab6/include/: Imaginary.h  Node.h  Vector.h
lab6/src/: Imaginary.cpp  Node.cpp  Vector.cpp  main.cpp
lab7/: CMakeLists.txt
lab7/include/: Circle.h  Figure.h  Rectangle.h
lab7/src/: Circle.cpp  Figure.cpp  Rectangle.cpp  main.cpp
lab8/: CMakeLists.txt
lab8/include/: ListNote.h  Note.h  NoteDirector.h  TextNote.h
lab8/src/: ListNote.cpp  Note.cpp  NoteDirector.cpp  TextNote.cpp  main.cpp
lab9/: CMakeLists.txt
lab9/src/: main.cpp
matrixApp/: CMakeLists.txt  main.cpp
matrixLib/: CMakeLists.txt
matrixLib/include/: lib.h
matrixLib/src/: lib.cpp
simpleCalc/: CMakeLists.txt
simpleCalc/include/: calc.h
simpleCalc/src/: calc.cpp  main.cpp
